--- a/src/CoreBundle/Resources/views/Default/layout.html.twig
+++ b/src/CoreBundle/Resources/views/Default/layout.html.twig
@@ -153,7 +153,7 @@
                                         </a>
                                     </h1>
                                 </div>
-                {% include "@Front/default/menu.html.twig" %}
+                {% include "@Front/Default/menu.html.twig" %}
                 </header>
 {% block body %}{% endblock body%}
 <!-- JS SCRIPTS -->
