page histoire de la crypto

--- a/src/FrontBundle/Resources/views/Default/blockchain.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blockchain.html.twig
@@ -16,9 +16,9 @@
                         <div class="section-subtitle light_subtitle">Smart contracts are computer programs which allow for the automatic transfer of digital assets between parties based upon pre-specified conditions. Smart contracts are computer programs which allow for the automatic transfer of digital assets between parties based upon pre-specified conditions.</div>
                     </div>
                     <div class="spacer_40"></div>
-                    <div class="text-center bitwallet-btn modeltheme_button wow fadeInLeft">
+                    {# <div class="text-center bitwallet-btn modeltheme_button wow fadeInLeft">
                         <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">WHITEPAPPER</a>
-                    </div>
+                    </div> #}
                 </div>
                 <div class="col-sm-6">
                     <figure class="fadeInRight wow">
@@ -40,7 +40,7 @@
                     <div class="wpb_single_image wpb_content_element vc_align_left wow fadeInLeft">
                         <figure class="wpb_wrapper vc_figure">
                             <div class="vc_single_image-wrapper   vc_box_border_grey">
-                                <img width="335" height="450" src="assets/images/Vector-Smart-Object9.png" class="vc_single_image-img attachment-full" alt="Vector-Smart-Object9" />    
+                                <img width="335" height="450" src="/bundles/front/assets/images/Vector-Smart-Object9.png" class="vc_single_image-img attachment-full" alt="Vector-Smart-Object9" />    
                             </div>
                         </figure>
                     </div>
@@ -55,9 +55,9 @@
                         <div class="section-subtitle light_subtitle">Smart contracts are computer programs which allow for the automatic transfer of digital assets between parties based upon pre-specified conditions. Smart contracts are computer programs which allow for the automatic transfer of digital assets between parties based upon pre-specified conditions.</div>
                     </div>
                     <div class="spacer_40"></div>
-                    <div class="text-center bitwallet-btn modeltheme_button wow fadeInRight">
+                    {# <div class="text-center bitwallet-btn modeltheme_button wow fadeInRight">
                         <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">READ MORE</a>
-                    </div>
+                    </div> #}
                 </div>
             </div>
         </div>
