--- a/src/FrontBundle/Resources/views/Default/menu.html.twig
+++ b/src/FrontBundle/Resources/views/Default/menu.html.twig
@@ -15,9 +15,9 @@
                     </ul>
                 </li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('default_blockchain') }}">Blockchain</a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#to_token_sale">Token sale</a></li>
+                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('default_histoire_crypto') }}">Histoire de la Crypto</a></li>
                
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#to_roadmap">Timeline</a></li>
+                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#to_roadmap">Mon Compte</a></li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#to_team">Team</a></li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#to_testimonial">Testimonial</a></li>
 
