--- a/src/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontBundle/Resources/views/Default/index.html.twig
@@ -168,6 +168,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="row decentralized-total-contribution">
                                 <div class="col-sm-6 border-right">
                                     <div class="mt-icon-list-item mt-parent-icon-list-item wow fadeIn">
@@ -321,6 +322,7 @@
                             </div>
                         </div>
                     </div>
+                    {{ dump(lastArticle) }}
                     <!-- Section4 - BitWallet OUR ROADMAP -->
                     <div class="clearfix"></div>
                     <div id="to_roadmap" class="cryptic_ico_our_roadmap padding_top-80 text-center page-fill">
