--- a/src/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/AdminBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,8 @@
-{% extends '@EasyAdmin/default/layout.html.twig' %}
+{% extends '@Core/Default/layout.html.twig' %}
 
-{% block formArticle %}
-<div class="well">
+
+{% block body %}
+  <div class="well text-center" style="padding-top: 150px">
   {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
   {# Les erreurs générales du formulaire. #}
@@ -53,7 +54,7 @@
 
     <div class="col-sm-10">
       {# Génération de l'input. #}
-      {{ form_widget(form.image, {'attr': {'class': 'form-control'}}) }}
+      {{ form_widget(form.image) }}
     </div>
   </div>
 
