--- a/src/AdminBundle/Resources/views/Default/listarticle.html.twig
+++ b/src/AdminBundle/Resources/views/Default/listarticle.html.twig
@@ -1,6 +1,6 @@
-{% extends '@EasyAdmin/default/layout.html.twig' %}
+{% extends '@Core/Default/layout.html.twig' %}
 
-{% block formArticle %}
+{% block body %}
 
 
 <div class="box-article">
@@ -11,7 +11,7 @@
         <span class="information-article">{{ article.author }} - {{ article.date|date('d/m/Y')}}</span>
         <h4 class="title-article">{{article.title|truncate(50)}}</h4>
         <a class="button green" href="{{ path('admin_edit_article', {'id': article.id}) }}">Edition</a>
-        <a class="button red" href="{{ path('lsdg_blog_view', {'id': article.id}) }}">Supprimer</a>
+        <a class="button red" href="{{ path('admin_list_article', {'id': article.id}) }}">Supprimer</a>
       </li>
         {% else %}
         <li>Aucun article pour le moment</li>
