--- a/src/FrontBundle/Resources/views/Default/ethereum.html.twig
+++ b/src/FrontBundle/Resources/views/Default/ethereum.html.twig
@@ -31,7 +31,7 @@
                         <p>Praesent et tincidunt magna, eget consectetur nunc. Ut vestibulum cursus eros eu pulvinar. Maecenas sagittis odio sit amet lorem pharetra, quis iaculis diam molestie. Sed eros felis, consectetur quis tellus quis, molestie fringilla nunc. Cras volutpat, dolor sodales tincidunt finibus, purus magna lacinia lorem, ullamcorper hendrerit urna tellus at lorem.</p>
                     </div>
                     <!-- Cryptocurrency List Widget -->
-                    <h3 class="text-bold text-white">Listes des crypto-monnaies</h3>
+                    <h3 class="text-bold text-white">Cours Etherum</h3>
                     <div class="ccpw-widget">
                         <table class="ccpw_table table-blog-affiliate">
                             <thead>
@@ -44,44 +44,21 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <div class="ccpw_icon ccpw_coin_logo"><i class="cc BTC"></i></div>
-                                        <div class="ccpw_coin_info">
-                                           <span class="name">Bitcoin</span>
-                                           <span class="coin_symbol">(BTC)</span>
-                                        </div>
-                                    </td>
-                                    <td class="price">
-                                        <div class="price-value"><i class="fa fa-usd" aria-hidden="true"></i>6855.83</div>
-                                    </td>
-                                    <td><span class="changes up"><i class="fa fa-arrow-up" aria-hidden="true">   </i>  1.68%</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
                                         <div class="ccpw_icon ccpw_coin_logo"><i class="cc ETH"></i></div>
                                         <div class="ccpw_coin_info">
-                                           <span class="name">Ethereum</span>
+                                           <span class="name">Etherum</span>
                                            <span class="coin_symbol">(ETH)</span>
                                         </div>
                                     </td>
                                     <td class="price">
-                                        <div class="price-value"><i class="fa fa-usd" aria-hidden="true"></i>     416.979</div>
+                                        <div class="price-value">{{ETHInfo}} <i class="fa fa-eur" aria-hidden="true"></i></div>
                                     </td>
-                                    <td><span class="changes up"><i class="fa fa-arrow-up" aria-hidden="true">   </i>  5.1%</span>
-                                    </td>
-                                </tr>
-                                <tr>
+
                                     <td>
-                                        <div class="ccpw_icon ccpw_coin_logo"><i class="cc LTC"></i></div>
-                                        <div class="ccpw_coin_info">
-                                           <span class="name">Litecoin</span>
-                                           <span class="coin_symbol">(LTC)</span>
-                                        </div>
-                                    </td>
-                                    <td class="price">
-                                        <div class="price-value"><i class="fa fa-usd" aria-hidden="true"></i>     114.335</div>
-                                    </td>
-                                    <td><span class="changes up"><i class="fa fa-arrow-up" aria-hidden="true">   </i>  0.71%</span>
+                                        {% if ETHRate > 0 %}<span class="changes up"><i class="fa fa-arrow-up" aria-hidden="true">   </i>  {{ETHRate|round(2)}}%</span>
+                                        {% else %}
+                                        <span class="changes up" style="color: red;"><i class="fa fa-arrow-down" aria-hidden="true">   </i>  {{ETHRate|round(2)}}%</span>
+                                        {% endif %}
                                     </td>
                                 </tr>
                             </tbody>
