crypto content added

--- a/src/FrontBundle/Resources/views/Default/bitcoin.html.twig
+++ b/src/FrontBundle/Resources/views/Default/bitcoin.html.twig
@@ -7,7 +7,7 @@
                 <div class="col-md-9 main-content">
                     <div class="article-header">
                         <div class="article-details">
-                            <img width="900" height="550" src="bundles/front/assets/images/bitcurrency_theme-1-900x550.jpg" class="attachment-cryptic_blog_900x550   size-cryptic_blog_900x550 wp-post-image" alt="" />
+                            <img width="900" height="550" style="padding-top:90px; " src="/bundles/front/assets/images/bitcoin2.jpg" class="attachment-cryptic_blog_900x550   size-cryptic_blog_900x550 wp-post-image" alt="" />
                             <div class="clearfix"></div>
                             <h1 class="post-title text-white">
                                <strong>Le Bitcoin</strong>
@@ -27,13 +27,18 @@
                     </div>
                     <!-- CONTENT -->
                     <div class="article-content">
-                        <p>Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fu sed quia conse quun tur magni dolor quia. In scelerisque turpis vel bibendum sodales. Nunc consectetur nec mi eu vehicula.</p>
+                        <p>Le bitcoin est une monnaie électronique conçue par Satoshi Nakamoto en 2009 et créée en dehors de tout champ étatique qui n'a toutefois qu'une partie des attributs d'une monnaie classique : si le bitcoin est une unité monétaire et un instrument de paiement pour ceux qui l'acceptent, il n'a pas de d'effet libératoire légal car il n'est pas possible d'imposer le paiement en bitcoin en dehors de la communauté. Le bitcoin est promu, standardisé et protégé par la fondation Bitcoin.</p>
                         <p><span></span></p>
-                        <p>Praesent et tincidunt magna, eget consectetur nunc. Ut vestibulum cursus eros eu pulvinar. Maecenas sagittis odio sit amet lorem pharetra, quis iaculis diam molestie. Sed eros felis, consectetur quis tellus quis, molestie fringilla nunc. Cras volutpat, dolor sodales tincidunt finibus, purus magna lacinia lorem, ullamcorper hendrerit urna tellus at lorem.</p>
+                        <p>Pour créer et gérer les bitcoins, Bitcoin s'appuie sur un logiciel. Dans ce logiciel, les bitcoins sont créés conformément à un protocole qui rétribue les agents qui ont traité des transactions. Ces agents mettent à contribution leur puissance de calcul informatique afin de vérifier, de sécuriser et d'inscrire les transactions dans un registre virtuel, appelé la blockchain, en français chaîne de blocs, nom qui vient du fait que l'entité de base de Bitcoin s'appelle un bloc, et que les blocs sont ensuite reliés en une chaîne, la chaine de blocs.</p>
+                        <p><span></span></p>
+                        <p>Pour chaque nouveau bloc accepté, l'activité de vérification-sécurisation-enregistrement, appelée minage, est rémunérée par des bitcoins nouvellement créés et par les frais des transactions traitées. En tant que monnaie ou commodité, les bitcoins peuvent être échangés contre d'autres monnaies ou commodités, biens ou services. Le taux d'échange de la cryptomonnaie est fixé principalement sur des places de marché spécialisées et fluctue selon la loi de l'offre et de la demande.</p>
+                        <p><span></span></p>
+                        <p>Il est possible d'acheter des bitcoins en ligne sur des plateformes spécialisées. Ces plateformes permettent également de suivre en temps réel l'évolution du prix du bitcoin par rapport à d'autres monnaies ou cryptomonnaies.</p>
                     </div>
                     <!-- Cryptocurrency List Widget -->
                     <h3 class="text-bold text-white">Cour du BitCoin</h3>
                     <div class="ccpw-widget">
+                        
                         <table class="ccpw_table table-blog-affiliate">
                             <thead>
                                 <tr>
