--- a/src/FrontBundle/Resources/views/Default/blockchain.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blockchain.html.twig
@@ -6,21 +6,22 @@
     <div id="to_products" class="padding_top-80 text_center page-fill">
         <div class="container">
             <div class="row vc_row-has-fill">
-                <div class="col-sm-6">
+                <div class="col-sm-7">
                     <div class="title-subtile-holder wow fadeInLeft text_left">
-                        <h1 class="section-title light_title no-margin">Product based onBlockchain</h1>
+                        <h1 class="section-title light_title no-margin">Comment la block-chain amène une sécurité supplémentaire aux échanges ?</h1>
                         <div class="spacer_10"></div>
                         <div class="clearfix"></div>
                         <div class="section-border green_border no-margin"></div>
                         <div class="spacer_10"></div>
-                        <div class="section-subtitle light_subtitle">Smart contracts are computer programs which allow for the automatic transfer of digital assets between parties based upon pre-specified conditions. Smart contracts are computer programs which allow for the automatic transfer of digital assets between parties based upon pre-specified conditions.</div>
+                        <div class="section-subtitle light_subtitle">
+                                Par définition, la blockchain est une technologie de stockage et de transmission d’informations, transparente, sécurisée, et fonctionnant sans organe central de contrôle (définition de Blockchain France). Il existe des blockchains publiques, ouvertes à tous, et des blockchains privées, dont l’accès et l’utilisation sont limitées à un certain nombre d’acteurs. Une blockchain publique peut donc être assimilée à un grand livre comptable public, anonyme et infalsifiable… Nous allons voir en quoi cela apporte une sûreté supplémentaire aux échanges.</div>
                     </div>
                     <div class="spacer_40"></div>
                     {# <div class="text-center bitwallet-btn modeltheme_button wow fadeInLeft">
                         <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">WHITEPAPPER</a>
                     </div> #}
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                     <figure class="fadeInRight wow">
                         <img width="520" height="415" src="/bundles/front/assets/images/Vector-Smart-Object9_2.png" class="fadeInRight wow" alt="Vector-Smart-Object10"/>
                     </figure>
