--- a/src/FrontBundle/Resources/views/Default/ethereum.html.twig
+++ b/src/FrontBundle/Resources/views/Default/ethereum.html.twig
@@ -6,7 +6,7 @@
                 <div class="col-md-9 main-content">
                     <div class="article-header">
                         <div class="article-details">
-                            <img width="900" height="550" src="/bundles/front/assets/images/bitcurrency_theme-1-900x550.jpg" class="attachment-cryptic_blog_900x550   size-cryptic_blog_900x550 wp-post-image" alt="" />
+                            <img width="900" height="550" style="padding-top:90px;" src="/bundles/front/assets/images/etherum.png" class="attachment-cryptic_blog_900x550   size-cryptic_blog_900x550 wp-post-image" alt="" />
                             <div class="clearfix"></div>
                             <h1 class="post-title text-white">
                                <strong>L'Ethereum</strong>
@@ -26,9 +26,18 @@
                     </div>
                     <!-- CONTENT -->
                     <div class="article-content">
-                        <p>Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fu sed quia conse quun tur magni dolor quia. In scelerisque turpis vel bibendum sodales. Nunc consectetur nec mi eu vehicula.</p>
+                        <p>Avec la deuxième plus grande capitalisation boursière dans le monde des crypto-monnaies, l’Ethereum a rapidement attiré l’attention des investisseurs et des amateurs de cryptocurrency. Cette crypto-monnaie relativement nouvelle ne constitue pas seulement un changement significatif par rapport aux crypto-monnaies les plus connues. L’Ethereum permet également le développement et le déploiement rapides de nouvelles applications. L’Ethereum a contribué en grande partie à la création de dizaines de nouvelles crypto-monnaies extrêmement innovantes.</p>
                         <p><span></span></p>
-                        <p>Praesent et tincidunt magna, eget consectetur nunc. Ut vestibulum cursus eros eu pulvinar. Maecenas sagittis odio sit amet lorem pharetra, quis iaculis diam molestie. Sed eros felis, consectetur quis tellus quis, molestie fringilla nunc. Cras volutpat, dolor sodales tincidunt finibus, purus magna lacinia lorem, ullamcorper hendrerit urna tellus at lorem.</p>
+                        <p>L' ethereum est une plateforme virtuelle qui adopte le protocole d'échanges décentralisés établit par le bitcoin, tout en développant son utilisation à plusieurs autres applications. À ne pas confondre avec l'ether, la crypto-monnaie à la base du réseau, qui est souvent appelée ethereum.</p>
+                        <p><span></span></p>
+                        <p>La plateforme ethereum a été lancée en 2015 par le programmeur Vitalik Buterin, originaire de Toronto. Son but étant d'héberger une crypto-monnaie, mais aussi et surtout des applications collaboratives et décentralisées. L'ether (ETH) est une crypto-monnaie qui peut être utilisée comme moyen de paiement sur cette plateforme. Comme le bitcoin, l'ether existe dans le cadre d'un système financier pair-à-pair autonome, sans aucune supervision ou intervention de l'État. Et comme le bitcoin, l'éther a vu sa valeur monter en flèche très rapidement.</p>
+                        <p><span></span></p>
+                        <p>Ethereum offre quelques différences par rapport à Bitcoin :</p>
+                        <ul>
+                            <li><p>La blockchain Ethereum accepte un nouveau bloc tout les 12 secondes comparée au Bitcoin qui demande 10 minutes. Cet aspect, permis par l’utilisation du protocole Ghost  (Greedy Heaviest Observed Subtree), donne des temps de transaction plus rapides.</p></li>
+                            <li><p>Le modèle de création et livraison de nouvelle monnaie (bitcoin dans un cas, ether dans l’autre) n’est pas le même:  pour le Bitcoin la récompense pour avoir cassé un nouveau bloc est divisé par deux environ tous les 4 ans, alors que Ethereum délivre le même montant de éther de manière régulière chaque année et à l’infini.</p></li>
+                            <li><p>La calcul du coût de transaction n’est pas le même: dans Ethereum il dépend de la complexité  d’une transaction et de l’utilisation qu’elle fait des ressources machine (cycles de la machine, largeur de bande, quantité de stockage…) Les transactions bitcoin sont standard et toutes un clone égale l’une avec l’autre. Le cout de transaction est discrétise dans Ethereum en unités de ether appellées gaz.</p></li>
+                        </ul>
                     </div>
                     <!-- Cryptocurrency List Widget -->
                     <h3 class="text-bold text-white">Cours Etherum</h3>
