--- a/src/FrontBundle/Resources/views/Default/litecoin.html.twig
+++ b/src/FrontBundle/Resources/views/Default/litecoin.html.twig
@@ -7,7 +7,7 @@
                 <div class="col-md-9 main-content">
                     <div class="article-header">
                         <div class="article-details">
-                            <img width="900" height="550" src="assets/images/bitcurrency_theme-1-900x550.jpg" class="attachment-cryptic_blog_900x550   size-cryptic_blog_900x550 wp-post-image" alt="" />
+                            <img width="900" height="550" style="padding-top:100px;" src="/bundles/front/assets/images/litecoin.jpg" class="attachment-cryptic_blog_900x550   size-cryptic_blog_900x550 wp-post-image" alt="" />
                             <div class="clearfix"></div>
                             <h1 class="post-title text-white">
                                <strong>Le Litecoin</strong>
@@ -27,9 +27,22 @@
                     </div>
                     <!-- CONTENT -->
                     <div class="article-content">
-                        <p>Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fu sed quia conse quun tur magni dolor quia. In scelerisque turpis vel bibendum sodales. Nunc consectetur nec mi eu vehicula.</p>
+                        <p>La crypto-monnaie Litecoin (LTC) est un fork du Bitcoin. Il s’agit d’un système de paiement décentralisé, qui a été été lancé le 7 octobre 2011 par Charlie Lee, un ancien employé de Google et de Coinbase. Le Litecoin a été développé par l’intermédiaire d’un client open source sur GitHub et son code est une modification du code de Bitcoin. Il est souvent considéré comme le petit frère du Bitcoin et si ce dernier est comparé à l’or numérique, on parle du Litecoin comme de l’argent numérique.</p>
                         <p><span></span></p>
-                        <p>Praesent et tincidunt magna, eget consectetur nunc. Ut vestibulum cursus eros eu pulvinar. Maecenas sagittis odio sit amet lorem pharetra, quis iaculis diam molestie. Sed eros felis, consectetur quis tellus quis, molestie fringilla nunc. Cras volutpat, dolor sodales tincidunt finibus, purus magna lacinia lorem, ullamcorper hendrerit urna tellus at lorem.</p>
+                        <p>Le Litecoin est une crypto-monnaie pair-à-pair qui permet d’effectuer des paiements instantanés partout dans le monde. Le Litecoin corrige certaines lacunes du Bitcoin comme les lenteurs dont souffre le processus de validation des transactions. Cela est notamment rendu possible par l’utilisation d’un algorithme de hashage différent, capable de valider les transactions 4 fois plus rapidement que le Bitcoin. Le Litecoin est programmé pour créer un bloc toutes les 2 minutes et 30 secondes (contre 10 minutes pour le Bitcoin).</p>
+                        <p><span></span></p>
+                        <p>Bien qu’il soit basé sur le protocole Bitcoin, il peut être miné efficacement avec un matériel accessible au grand public, contrairement au Bitcoin qui nécessite des machines spécialisées et puissantes. Le Litecoin utilise un algorithme Proof-of-Work (PoW) basé sur Scrypt pour pouvoir être miné par GPU (avec des cartes graphiques). Le Litecoin a récemment déployé les technologies Segregated Witness (SEGWIT) et Lightning Network sur sa blockchain.</p>
+                        <p><span></span></p>
+                        <p>En juin 2018, 1 LTC valait 68,16 €, faisant de cette monnaie la sixième crypto-monnaie la plus importante en matière de capitalisation.</p>
+                        <p><span></span></p>
+                        <p><u>Litecoin offre quelques différences par rapport à Bitcoin :</u></p>
+                        <ul>
+                            <li><p>Le réseau de Litecoin a pour but de créer un bloc toutes les deux minutes trente, plutôt que toutes les dix minutes pour Bitcoin.</p></li>
+                            <li><p>Confirmation plus rapide des transactions.</p></li>
+                            <li><p>Frais de transaction minimes.</p></li>
+                            <li><p>L'interface est modifiée permettant le minage des pièces depuis n'importe quel ordinateur : le minage est possible avec du matériel informatique standard et non spécialisé.</p></li>
+                            <li><p>L'algorithme de minage peut s'exécuter en même temps et sur les mêmes machines utilisées pour miner des bitcoins.</p></li>
+                        </ul>
                     </div>
                     <!-- Cryptocurrency List Widget -->
                     <h3 class="text-bold text-white">Cours Litecoin</h3>
