--- a/src/FrontBundle/Resources/views/Default/menu.html.twig
+++ b/src/FrontBundle/Resources/views/Default/menu.html.twig
@@ -22,7 +22,7 @@
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('default_blockchain') }}">Blockchain</a></li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('default_histoire_crypto') }}">Histoire de la Crypto</a></li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('default_crypto_eco') }}">La Crypto et l'Economie</a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#to_roadmap">Mon Compte</a></li>
+                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/profile">Mon Compte</a></li>
                 
                 <li class="to_whitepaper menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('fos_user_security_login') }}">Connexion</a></li>
             </ul>
