--- a/src/FrontBundle/Resources/views/Default/crypto_eco.html.twig
+++ b/src/FrontBundle/Resources/views/Default/crypto_eco.html.twig
@@ -2,6 +2,68 @@
 
 {% block body %}
 
-
+ <!-- Section3 - BitWallet onBlockchain -->
+ <div class="clearfix"></div>
+ <div id="to_products" class="padding_top-80 text_center page-fill">
+     <div class="container">
+         <div class="row vc_row-has-fill">
+             <div class="col-sm-7">
+                 <div class="title-subtile-holder wow fadeInLeft text_left">
+                     <h1 class="section-title light_title no-margin">La crypto monnaie, une future révolution de l’économie mondiale</h1>
+                     <div class="spacer_10"></div>
+                     <div class="clearfix"></div>
+                     <div class="section-border green_border no-margin"></div>
+                     <div class="spacer_10"></div>
+                     <div class="section-subtitle light_subtitle">
+                            Depuis très longtemps la banque est au cœur de notre système financier. Les mécanismes banquiers sont ce qui font fonctionner notre économie, et si avec l’apparition de modes de financements alternatifs comme la cryptomonnaie cela serait il amené à changer à l’avenir ? On sait que la crypto monnaie est un phénomène récent et en développement, de ce fait, il connait énormément de fluctuations, mais si dans quelques années cela arrive à se stabiliser, cela pourrait bien menacer la pérennité du système bancaire… Avec des frais quasi inexistants comparé à la banque, les différents économiques pourraient se tourner vers cette innovation…</div>
+                 </div>
+                 <div class="spacer_40"></div>
+                 {# <div class="text-center bitwallet-btn modeltheme_button wow fadeInLeft">
+                     <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">WHITEPAPPER</a>
+                 </div> #}
+             </div>
+             <div class="col-sm-5">
+                 <figure class="fadeInRight wow">
+                     <img width="520" height="415" src="/bundles/front/assets/images/Vector-Smart-Object9_2.png" class="fadeInRight wow" alt="Vector-Smart-Object10"/>
+                 </figure>
+             </div>
+             <div class="spacer_80"></div>
+             <div class="clearfix"></div>
+             <div class="vc_separator wpb_content_element vc_separator_align_center vc_sep_width_100 vc_sep_pos_align_center vc_separator_no_text wow fadeIn">
+                 <span class="vc_sep_holder vc_sep_holder_l">
+                     <span class="sep_line"></span>
+                 </span>
+                 <span class="vc_sep_holder vc_sep_holder_r">
+                     <span class="sep_line"></span>
+                 </span>
+             </div>
+             <div class="spacer_50"></div>
+             <div class="col-sm-6 vc_col-has-fill">
+                 <div class="wpb_single_image wpb_content_element vc_align_left wow fadeInLeft">
+                     <figure class="wpb_wrapper vc_figure">
+                         <div class="vc_single_image-wrapper   vc_box_border_grey">
+                             <img width="335" height="450" src="/bundles/front/assets/images/Vector-Smart-Object9_00.png" class="vc_single_image-img attachment-full" alt="Vector-Smart-Object9" />    
+                         </div>
+                     </figure>
+                 </div>
+             </div>
+             <div class="col-sm-6">
+                 <div class="title-subtile-holder wow fadeInRight text_left">
+                     <h1 class="section-title light_title no-margin">La crypto monnaie, quel enjeu pour le E-commerce ?</h1>
+                     <div class="spacer_10"></div>
+                     <div class="clearfix"></div>
+                     <div class="section-border green_border no-margin"></div>
+                     <div class="spacer_10"></div>
+                     <div class="section-subtitle light_subtitle">
+                            Télégrammes, radio, minitel, internet… Depuis la nuit des temps le monde ne cesse d’évoluer forçant les entreprises à s’adapter à leur environnement pour assurer leur pérennité. Aujourd’hui nous sommes face à l’essor et le développement des crypto monnaies, de ce fait, nous allons voir comment les entreprises sont plus enclin à se tourner vers ce nouveau mode de financement alternatif et quel enjeu représente-t-il pour l’avenir du E-commerce.</div>
+                 </div>
+                 <div class="spacer_40"></div>
+                 {# <div class="text-center bitwallet-btn modeltheme_button wow fadeInRight">
+                     <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">READ MORE</a>
+                 </div> #}
+             </div>
+         </div>
+     </div>
+ </div>
 
 {% endblock body %}
